src/objects/Customer_Holiday__c.object
<CustomObject>
    <fields>
        <fullName>Account_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Customer Holidays</relationshipLabel>
        <relationshipName>Customer_Holidays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
    <label>Customer Holiday</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>From__c</columns>
        <columns>Day__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Customer Holidays Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Holidays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TS_ToFromDateValidation</fullName>
        <active>true</active>
        <errorConditionFormula>From__c &gt;  Day__c</errorConditionFormula>
        <errorMessage>Please check the duration of the holiday. (e.g. FROM date should not be later than TO date).</errorMessage>
    </validationRules>
</CustomObject>